ADM-715[backend]refactor: delete useless method (#975)