@@ -2,35 +2,26 @@ package heartbeat.service.source.github;
 
 import heartbeat.client.GitHubFeignClient;
 import heartbeat.client.dto.codebase.github.CommitInfo;
-import heartbeat.client.dto.codebase.github.GitHubOrganizationsInfo;
-import heartbeat.client.dto.codebase.github.GitHubRepo;
 import heartbeat.client.dto.codebase.github.LeadTime;
 import heartbeat.client.dto.codebase.github.PipelineLeadTime;
 import heartbeat.client.dto.codebase.github.PullRequestInfo;
 import heartbeat.client.dto.pipeline.buildkite.DeployInfo;
 import heartbeat.client.dto.pipeline.buildkite.DeployTimes;
-import heartbeat.controller.source.dto.SourceControlResponse;
 import heartbeat.exception.BaseException;
-import heartbeat.exception.GithubRepoEmptyException;
 import heartbeat.exception.InternalServerErrorException;
 import heartbeat.exception.NotFoundException;
 import heartbeat.exception.PermissionDenyException;
 import heartbeat.service.source.github.model.PipelineInfoOfRepository;
 import heartbeat.util.GithubUtil;
-import jakarta.annotation.PreDestroy;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
-import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.Collection;
 import java.util.Comparator;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.Objects;
 import java.util.Collections;
 import java.util.concurrent.CompletableFuture;
@@ -45,55 +36,9 @@ public class GitHubService {
 
 	public static final String BEARER_TITLE = "Bearer ";
 
-	private final ThreadPoolTaskExecutor customTaskExecutor;
-
 	private final GitHubFeignClient gitHubFeignClient;
 
-	@PreDestroy
-	public void shutdownExecutor() {
-		customTaskExecutor.shutdown();
-	}
-
-	@Deprecated
-	public SourceControlResponse verifyToken(String githubToken) {
-		try {
-			String token = TOKEN_TITLE + githubToken;
-			log.info("Start to query repository url by token");
-			CompletableFuture<List<GitHubRepo>> githubReposByUserFuture = CompletableFuture
-				.supplyAsync(() -> gitHubFeignClient.getAllRepos(token), customTaskExecutor);
-
-			log.info("Start to query organizations by token");
-			CompletableFuture<List<GitHubOrganizationsInfo>> githubOrganizationsFuture = CompletableFuture
-				.supplyAsync(() -> gitHubFeignClient.getGithubOrganizationsInfo(token), customTaskExecutor);
-
-			return githubReposByUserFuture
-				.thenCombineAsync(githubOrganizationsFuture, (githubReposByUser, githubOrganizations) -> {
-					log.info("Successfully get repository by token, githubReposByUser size: {}",
-							githubReposByUser.size());
-					log.info("Successfully get organizations by token, githubOrganizations: {}", githubOrganizations);
-					List<String> githubReposMapped = githubReposByUser.stream().map(GitHubRepo::getHtmlUrl).toList();
-					LinkedHashSet<String> githubRepos = new LinkedHashSet<>(githubReposMapped);
-					CompletableFuture<Set<String>> githubReposByOrganizations = getAllGitHubReposAsync(token,
-							githubOrganizations);
-					Set<String> allGitHubRepos = githubReposByOrganizations.join();
-					log.info("Successfully get all repositories by token, repos size: {}", allGitHubRepos.size());
-					githubRepos.addAll(allGitHubRepos);
-					return SourceControlResponse.builder().githubRepos(githubRepos).build();
-				}, customTaskExecutor)
-				.join();
-		}
-		catch (RuntimeException e) {
-			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
-			log.error("Failed to call GitHub with token_error: {} ", cause.getMessage());
-			if (cause instanceof BaseException baseException) {
-				throw baseException;
-			}
-			throw new InternalServerErrorException(
-					String.format("Failed to call GitHub with token_error: %s", cause.getMessage()));
-		}
-	}
-
-	public void verifyTokenV2(String githubToken) {
+	public void verifyToken(String githubToken) {
 		try {
 			String token = TOKEN_TITLE + githubToken;
 			log.info("Start to request github with token");
@@ -133,34 +78,6 @@ public class GitHubService {
 		}
 	}
 
-	@Deprecated
-	private CompletableFuture<Set<String>> getAllGitHubReposAsync(String token,
-			List<GitHubOrganizationsInfo> gitHubOrganizations) {
-		List<CompletableFuture<List<String>>> repoFutures = gitHubOrganizations.stream()
-			.map(GitHubOrganizationsInfo::getLogin)
-			.map(org -> CompletableFuture.supplyAsync(() -> {
-				log.info("Start to query repository by organization: {}", org);
-				List<String> repos = gitHubFeignClient.getReposByOrganizationName(org, token)
-					.stream()
-					.map(GitHubRepo::getHtmlUrl)
-					.toList();
-				log.info("Successfully query repository by organization: {}, repos size: {}", org, repos.size());
-				return repos;
-			}, customTaskExecutor))
-			.toList();
-		return CompletableFuture.allOf(repoFutures.toArray(new CompletableFuture[0]))
-			.thenApply(v -> repoFutures.stream()
-				.map(CompletableFuture::join)
-				.flatMap(Collection::stream)
-				.collect(Collectors.collectingAndThen(Collectors.toSet(), allRepos -> {
-					if (allRepos.isEmpty()) {
-						throw new GithubRepoEmptyException("No GitHub repositories found.");
-					}
-					return allRepos;
-				})));
-
-	}
-
 	public List<PipelineLeadTime> fetchPipelinesLeadTime(List<DeployTimes> deployTimes,
 			Map<String, String> repositories, String token) {
 		try {
@@ -181,7 +98,7 @@ public class GitHubService {
 						.thenApply(v -> leadTimeFutures.stream()
 							.map(CompletableFuture::join)
 							.filter(Objects::nonNull)
-							.collect(Collectors.toList()));
+							.toList());
 
 					return allLeadTimesFuture.thenApply(leadTimes -> PipelineLeadTime.builder()
 						.pipelineName(item.getPipelineName())
